# Camera-Calibration-and-Augmented-Reality

./: CMakeLists.txt  LICENSE  README.md
data/: calibration.xml
include/: functions.hpp
scripts/: CMakeCache.txt  CameraCalib  Makefile  cmake_install.cmake  setup_project.sh
src/: calibration.cpp  functions.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
